fix: do not shrink timeline badge, hide timestamp on mobile for topic events

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -100,6 +100,10 @@
 			&+.timeline-event:before {
 				display: none;
 			}
+
+			.timeline-text.timeago {
+				display: none;
+			}
 		}
 	}
 
@@ -145,6 +149,8 @@
 				display: flex;
 				align-items: center;
 				justify-content: center;
+				flex-shrink: 0;
+
 				width: 32px;
 				height: 32px;
 				padding: 0;
